tests/rosetta/out/Java/cheryls-birthday.error
javac error: exit status 1
/tmp/TestMochiToJavacheryls-birthday2593317129/001/CherylsBirthday.java:50: error: incompatible types: String cannot be converted to Number
        return ((Number)((Number)months.get(b.month)).doubleValue() + " ").doubleValue() + String.valueOf(b.day);
                                           ^
/tmp/TestMochiToJavacheryls-birthday2593317129/001/CherylsBirthday.java:50: error: cannot find symbol
        return ((Number)((Number)months.get(b.month)).doubleValue() + " ").doubleValue() + String.valueOf(b.day);
                                                                          ^
  symbol:   method doubleValue()
  location: class String
/tmp/TestMochiToJavacheryls-birthday2593317129/001/CherylsBirthday.java:84: error: incompatible types: String cannot be converted to Number
        System.out.println("Cheryl's birthday is " + ((Number)bstr(filtered4.get(0))).doubleValue());
                                                                  ^
3 errors
